--- a/openedx/core/djangoapps/notifications/templates/notifications/digest_content.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/digest_content.html
@@ -1,45 +1,54 @@
-<p style="width:100%">
-    {% for update in email_content %}
-        <h3 style="font-size: 1.375rem; font-weight:700; line-height:28px; margin-bottom: 0">
-            {{ update.title }}
-        </h3>
-        {% if update.help_text %}
-            <span style="float:left; color:#707070">{{ update.help_text }}</span>
+{% for update in email_content %}
+    <h3 style="font-size: 1.375rem; font-weight:700; line-height:28px; margin: 0.75rem 0 0;">
+        {{ update.title }}
+    </h3>
+    {% if update.help_text %}
+        <p style="margin: 0; height: 1.5rem; font-weight: 400; font-size: 14px; line-height: 24px">
+            <span style="float:left; color:#707070;">
+                {{ update.help_text }}
+            </span>
             {% if update.help_text_url %}
-                <span style="float:right">
+                <span style="float:right; margin-right: 0.25rem">
                     <a href="{{help_text_url}}" style="text-decoration: none; color: #00688D">
                         View all
                     </a>
                 </span>
             {% endif %}
-        {% endif %}
-        <p>
-            <table style="background-color:#FBFAF9; padding: 0.5rem 0" width="100%">
-                <tbody>
-                    {% for content in update.content %}
-                        <tr>
-                            <td style="padding: 0.5rem 1rem; width:1.75rem" align="center" valign="top">
-                                <img src="{{content.icon_url}}" style="max-height: 28px; max-width: 28px" />
-                            </td>
-                            <td style="padding: 0.5rem 1rem;" align="left" valign="top">
-                                <p style="font-size: 0.875rem; font-weight:400; line-height:24px; color:#454545; margin-bottom: 0;">
-                                    {{ content.title }}
-                                </p>
-                                <p style="color:#707070; margin-top: 0">
-                                    <span style="float: left">{{ content.course_name }}</span>
-                                    <span style="margin: 0 0.5rem; color:#D7D3D1">&middot</span>
-                                    <span>{{ content.time_ago }}</span>
-                                    <span style="float: right">
-                                        <a href="{{content.url}}" style="text-decoration: none; color: #00688D">
-                                            View
-                                        </a>
-                                    </span>
-                                </p>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
         </p>
-    {% endfor %}
-</p>
+    {% endif %}
+    <p style="height: 1rem; margin: 0;" />
+    <p style="margin: 0;">
+        <table style="background-color:#FBFAF9;" width="100%">
+            <tbody>
+                {% for content in update.content %}
+                    <tr>
+                        <td align="left" valign="top" style="padding: 1rem 0 1rem 1rem">
+                            <img
+                                src="https://edx-notifications-static.edx.org/icons/newspaper.png"
+                                style="max-height: 28px; max-width: 28px; margin: 0.75rem 1rem 0.75rem 0"
+                            />
+                        </td>
+                        <td width="100%" align="left" valign="top" style=" padding: 1rem 1rem 1rem 0">
+                            <p style="font-size: 0.875rem; font-weight:400; line-height:24px; color:#454545; margin: 0;">
+                                {{ content.title }}
+                            </p>
+                            <p style="color:#707070; margin-top: 0.5rem">
+                                <span style="float: left">
+                                    <span>{{ content.course_name }}</span>
+                                    <span style="padding: 0 0.375rem">&middot</span>
+                                    <span>{{ content.time_ago }}</span>
+                                </span>
+                                <span style="float: right">
+                                    <a href="{{content.url}}" style="text-decoration: none; color: #00688D">
+                                        View
+                                    </a>
+                                </span>
+                            </p>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </p>
+    <p style="height: 0.75rem; margin: 0;" />
+{% endfor %}
