--- a/openedx/core/djangoapps/notifications/templates/notifications/digest_header.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/digest_header.html
@@ -38,35 +38,40 @@
                     <tbody>
                         <tr>
                             {% for update in email_digest_updates %}
-                                <td width="50%">
-                                    <p style="
-                                        {% if not forloop.last %}padding-right: 0.5rem{% endif %}
-                                        {% if not forloop.first %}padding-left: 0.5rem{% endif %}"
-                                    >
-                                        <table
-                                            width="100%"
-                                            cellpadding="0"
-                                            cellspacing="0"
-                                            style="background: #1b3b40; color: white; border-radius: 8px;
-                                            padding: 1.25rem 1rem;"
-                                        >
-                                            <tbody>
-                                                <tr align="center">
-                                                    <td style="font-weight: 700; font-size: 32px; line-height: 44px; padding: 0">
-                                                        {{update.count}}
-                                                    </td>
-                                                </tr>
-                                                <tr align="center">
-                                                    <td style="font-weight: 600; font-size: 0.875rem; line-height: 20px; padding: 0">
-                                                        {{update.title}}
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </p>
-                                </td>
-                            {% endfor %}
-                        </tr>
+                            {% if forloop.last or forloop.revcounter0 == 1 %}
+                            {% if email_digest_updates|length|add:'1'|divisibleby:3 and not forloop.last%}
+                            <td style="width: 16%; visibility: hidden;"></td>
+                            {% elif email_digest_updates|length|add:'2'|divisibleby:3 and forloop.last%}
+                            <td style="width: 16%; visibility: hidden;"></td>
+                            {% endif %}
+                            {% endif %}
+                            <td width="33.33%">
+                                <p style="padding-right: 0.5rem; padding-left: 0.5rem; margin: 16px 0px">
+                                <table width="100%" cellpadding="0" cellspacing="0" style="background: #1b3b40; color: white; border-radius: 8px; padding: 1.25rem 1rem;
+                                    {% if forloop.last or forloop.revcounter0 == 1 %}
+                                        {% if email_digest_updates|length|add:'1'|divisibleby:3 %}
+                                            margin-left:-55%
+                                        {% endif %}
+                                     {% endif %}">
+                                    <tbody>
+                                        <tr align="center">
+                                            <td style="font-weight: 700; font-size: 32px; line-height: 44px; padding: 0">
+                                                {{update.count}}
+                                            </td>
+                                        </tr>
+                                        <tr align="center">
+                                            <td style="font-weight: 600; font-size: 0.875rem; line-height: 20px; padding: 0">
+                                                {{update.title}}
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                </p>
+                            </td>
+                            {% if forloop.counter|divisibleby:3 %}
+                        </tr> <!-- Close the row after every third td -->
+                        {% endif %}
+                        {% endfor %}
                     </tbody>
                 </table>
             </td>
