refactor: added tr tags

--- a/openedx/core/djangoapps/notifications/templates/notifications/digest_header.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/digest_header.html
@@ -55,7 +55,9 @@
                                     </table>
                             </td>
                             {% if forloop.counter|divisibleby:3 %}
-                            </tr> <!-- Close the row after every third td -->
+                            </tr><tr> <!-- Close the row after every third td -->
+                            {% elif forloop.last %}
+                            </tr>
                             {% endif %}
                         {% endfor %}
                     </tbody>
