--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -66,55 +66,37 @@ from openedx.core.djangolib.js_utils import (
                     % endif
                     % if sharing_sites_info:
                         <div class="wrapper-social-share">
-                            <button
-                                style="background-image: none; background-color: rgb(0, 38, 43); border-radius: 0px; color: white"
-                                class="social-toggle-btn btn"
-                            >
-                                <span class="icon fa fa-share-alt mr-2" style="text-shadow: none"></span>
+                            <button class="social-toggle-btn btn">
+                                <span class="icon fa fa-share-alt"></span>
                                 ${_('Share this video')}
                             </button>
-                            <div
-                                hidden
-                                class="container-social-share color-black p-2"
-                                style="width: 300px; border-radius: 6px; background-color: white; box-shadow: 0 .5rem 1rem rgba(0,0,0,.15),0 .25rem .625rem rgba(0,0,0,.15)"
-                            >
+                            <div hidden class="container-social-share">
                                 ${_('Share this video')}
-                                <div class="btn-link close-btn float-right">
-                                    <span style="color: black" class="icon fa fa-close" />
+                                <div class="btn-link close-btn">
+                                    <span class="icon fa fa-close"></span>
                                 </div>
-
                                 <br />
                                 % for sharing_site_info in sharing_sites_info:
                                 <a
-                                    class="btn-link social-share-link"
+                                    class="social-share-link"
                                     data-source="${sharing_site_info['name']}"
                                     href="${sharing_site_info['sharing_url']}"
                                     target="_blank"
                                     rel="noopener noreferrer"
-                                    style="font-size: 1.5rem"
                                 >
                                     <span class="icon fa ${sharing_site_info['fa_icon_name']}" aria-hidden="true"></span>
                                     <span class="sr">${_("Share on {site}").format(site=sharing_site_info['name'])}</span>
                                 </a>
                                 % endfor
                                 <br />
-                                <div style="background-color: #F2F0EF" class="public-video-url-container p-2">
-                                    <a href=${public_video_url} class="d-inline-block align-middle" style="width: 200px">
-                                        <div
-                                            class="text-nowrap"
-                                            style="color: black; overflow: hidden; text-overflow: ellipsis; vertical-align: middle"
-                                        >
-                                            ${public_video_url}
-                                        </div>
+                                <div class="public-video-url-container">
+                                    <a href=${public_video_url} class="public-video-url-link">
+                                        ${public_video_url}
                                     </a>
-                                    <div
-                                        class="public-video-copy-btn btn-link d-inline-block float-right"
-                                        data-url=${public_video_url}
-                                    >
-                                        <span class="icon fa fa-link pr-1"></span>
+                                    <div class="public-video-copy-btn" data-url=${public_video_url}>
+                                        <span class="icon fa fa-link"></span>
                                         <span>${_('Copy')}</span>
                                     </div>
-                                  <span>
                                 </div>
                             </div>
                         </div>
