fix: updated email notifications task and ui fixes

--- a/openedx/core/djangoapps/notifications/templates/notifications/digest_content.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/digest_content.html
@@ -39,7 +39,7 @@
                             <p style="color:#707070; margin: 0">
                                 <span style="float: left">
                                     <span>{{ notification.course_name }}</span>
-                                    <span style="padding: 0 0.375rem">&middot</span>
+                                    <span style="padding: 0 0.375rem">{{ "&middot;"|safe }}</span>
                                     <span>{{ notification.time_ago }}</span>
                                 </span>
                                 <span style="float: right">
