--- a/openedx/core/djangoapps/notifications/templates/notifications/edx_ace/email_digest/email/body.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/edx_ace/email_digest/email/body.html
@@ -1,4 +1,4 @@
-<div style="margin:0; padding:0; min-width: 100%; background-color: background-color:#C9C9C9">
+<div style="margin:0; padding:0; min-width: 100%; background-color:#C9C9C9">
     <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="line-height:1.5; max-width:600px; font-family:Inter">
         <tbody style="background-color:#f5f5f5">
             <tr>
@@ -18,5 +18,4 @@
             </tr>
         </tbody>
     </table>
-
 </div>
